--- a/HTML and CSS/index.html
+++ b/HTML and CSS/index.html
@@ -20,7 +20,7 @@
         <li><a href="#">About</a></li>
         <li><a href="#">GUI</a></li>
         <li><a href="#">Design</a></li>
-        <li><a href="#">Idea 4</a></li>
+        <li><a href="#">Usability</a></li>
       </ul>
   </nav>
 </body>
